--- a/front_end/advme-react/src/App.css
+++ b/front_end/advme-react/src/App.css
@@ -3,22 +3,12 @@
   background-color: #021C24;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 input {
   padding: 1%;
   border: solid white;
   border-radius: 10px;
 }
+
 .ContentBox1 {
   width: 60%;
   height: 70%; 
@@ -26,6 +16,7 @@ input {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 34px;
   align-items: center;
+  border-top: green 6px solid;
 }
 div.ContentBox2 {
   background-color:#C4C4C4;
@@ -33,6 +24,12 @@ div.ContentBox2 {
   padding: 10%;
   margin:10%;
   box-shadow: 3px 12px 30px black;
+}
+div.animation{
+  z-index:4;
+  width: 25%;
+  height: 20%;
+ 
 }
 .userPage {
   padding-right: 10%;
@@ -48,8 +45,6 @@ div.ContentBox2 {
   background-color: black;
   border: 1px dotted white;
   border-radius: 10px;
-
-
 }
 .skillContainer{
   align-content: center;
